# oglap-ggp-python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.fr.md  README.md  pyproject.toml
src/oglap/: __init__.py  _constants.py  _download.py  _geo.py  _grid.py  _naming.py  _semver.py  _spatial.py  _state.py  _validate.py  engine.py
tests/: conftest.py  test_oglap.py
