[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oglap"
version = "0.1.0"
description = "OGLAP Protocol SDK — Offline Grid Location Addressing for Guinea (GN)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "OGLAP Team" }]
keywords = ["gis", "geocoding", "addressing", "guinea", "grid", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "shapely>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oglap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
